Add links and change name to collapsible listbox

--- a/examples/listbox/listbox-expandable.html
+++ b/examples/listbox/listbox-expandable.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Expandable Dropdown Listbox Example | WAI-ARIA Authoring Practices 1.1</title>
+<title>Collapsible Dropdown Listbox Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -15,11 +15,11 @@
 <!--  CSS and JS for this example. -->
 <link href="css/listbox.css" rel="stylesheet">
 <script src="js/listbox.js" type="text/javascript"></script>
-<script src="js/listbox-expandable.js" type="text/javascript"></script>
+<script src="js/listbox-collapsible.js" type="text/javascript"></script>
 </head>
 <body>
   <main>
-  <h1>Expandable Dropdown Listbox Example</h1>
+  <h1>Collapsible Dropdown Listbox Example</h1>
   <p>
     <strong>NOTE:</strong> Provide feedback on this example page in
     <a href="https://github.com/w3c/aria-practices/issues/557">issue 557.</a>
@@ -27,7 +27,7 @@
   <p>
     The following example implementation of the
     <a href="../../#Listbox">design pattern for listbox</a>
-    demonstrates an expandable single-select listbox widget that is functionally similar to an HTML <code>select</code> input withthe the attribute <code>size=&quot;1&quot;</code>.
+    demonstrates a collapsible single-select listbox widget that is functionally similar to an HTML <code>select</code> input withthe the attribute <code>size=&quot;1&quot;</code>.
     The widget consists of a button that triggers the display of a listbox.
     In its default state, the widget is collapsed (the listbox is not visible)  and the button label shows the currently selected option from the listbox.
     When the button is activated, the listbox is displayed and the current option is focused and selected.
@@ -275,7 +275,7 @@
       </li>
       <li>
         Javascript:
-        <a href="js/listbox-expandable.js" type="text/javascript">listbox-expandable.js</a>
+        <a href="js/listbox-collapsible.js" type="text/javascript">listbox-expandable.js</a>
       </li>
     </ul>
   </section>
