Treview Examples: Fix missing role none on two nodes
Per feedback from @geppy in issue #514, added role="none" to one node in each of two files.

--- a/examples/treeview/treeview-2/treeview-2a.html
+++ b/examples/treeview/treeview-2/treeview-2a.html
@@ -103,7 +103,7 @@
                     aria-expanded="false">
                   <span> Pears </span>
                   <ul role="group">
-                    <li>
+                    <li role="none">
                       <a role="treeitem"
                          href="https://en.wikipedia.org/wiki/D%27Anjou">
                           Anjou
@@ -456,8 +456,8 @@
                 <ul>
                   <li>Identifies the <code>ul</code> element as a <code>tree</code> widget.</li>
                   <li>
-                    Because focus movement in the tree is managed with a 
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>, 
+                    Because focus movement in the tree is managed with a
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>,
                     the <code>tree</code> container does not need a <code>tabindex</code> attribute.
                   </li>
                 </ul>
