--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -21,7 +21,7 @@
       <h1>Navigation Treeview Example Using Declared Properties</h1>
       <p>
         <strong>NOTE:</strong>: This example is recently revised and ready for review.
-        Please provide feedback in 
+        Please provide feedback in
         <a href="https://github.com/w3c/aria-practices/issues/405">issue 405.</a>
       </p>
     <p>
@@ -111,7 +111,7 @@
                     </li>
                   </ul>
                 </li>
-                <li >
+                <li role="none">
                   <a role="treeitem"
                     aria-level="2"
                     aria-setsize="5"
