ARIA 1.0 Combobox with both list and inline autocomplete example: fix typo
Per feedback from @annabbott in issue #553, fixed spelling of "arbitrary".

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
@@ -35,7 +35,7 @@
       a listbox popup appears containing the matching names, and the first match is automatically selected.
       In addition, the portion of the selected suggestion that has not been typed by the user, a completion string, appears inline after the input cursor in the textbox.
       The automatically selected suggestion becomes the value of the textbox when the combobox loses focus unless the user chooses a different suggestion or changes the character string in the textbox.
-      Note that this implementation enables users to input the name of a state or territory, but it does not prevent input of any other arbetrary value.
+      Note that this implementation enables users to input the name of a state or territory, but it does not prevent input of any other arbitrary value.
     </p>
     <p>Similar examples include:</p>
     <ul>
