--- a/examples/listbox/listbox-collapsible.html
+++ b/examples/listbox/listbox-collapsible.html
@@ -44,9 +44,9 @@
       <p>Choose your favorite transuranic element (actinide or transactinide).</p>
       <div class="listbox-area">
         <div class="left-area">
-          <span id="exp_elem">Transuranium elements:</span>
+          <span id="exp_elem">Choose an element:</span>
           <div id="exp_wrapper">
-            <button aria-haspopup="listbox" id="exp_button">Neptunium</button>
+            <button aria-haspopup="listbox" aria-labelledby="exp_elem exp_button" id="exp_button">Neptunium</button>
             <ul id="exp_elem_list" tabindex="-1" role="listbox" aria-labelledby="exp_elem" class="hidden">
               <li id="exp_elem_Np" role="option">Neptunium</li>
               <li id="exp_elem_Pu" role="option">Plutonium</li>
