Remove Incomplete Presentation Role Examples Page
Work on issue #182 is not sufficiently complete for release 1.
However, a rough draft of content had been merged into master.
Removing the rough draft file and the link to it.

The rough draft file and the linking paragraph will be added back in a new feature branch called issue182-presentation-examples.
When work on the presentation examples is complete, we will merge that feature branch back to master.

Changes:

1. Modified aria-practices.html to remove link to presentation examples page.
2. deleted examples/presentation/PresentationRoleExamples.html

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4466,7 +4466,7 @@
     </section>
     <section id="presentation_role_examples">
       <h3>
-        Examples Demonstrating Effects of the <code>presentation</code> Role
+        Example Demonstrating Effects of the <code>presentation</code> Role
       </h3>
       <p>This code:</p>
       <pre>
@@ -4481,14 +4481,6 @@
         &lt;div&gt;Date of birth:&lt;/div&gt;
           &lt;div&gt;January 1, 3456&lt;/div&gt;
       </pre>
-      <p>
-        The
-        <a href="examples/presentation/PresentationRoleExamples.html">
-          <code>presentation</code> role examples page
-        </a>
-        includes several more examples that illustrate the three effects of the <code>presentation</code> role in a variety of scenarios and provides more detailed
-        explanations of the rationale behind them.
-      </p>
     </section>
   </section>
 
