added table styling and two more rows

--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -61,6 +61,18 @@
             <span role="cell">Acme, Inc.</span>
             <span role="cell">123 Broad St.</span>
           </div>
+          <div role="row">
+            <span role="cell">Ralph</span>
+            <span role="cell">Jefferson</span>
+            <span role="cell">XYZ, Inc.</span>
+            <span role="cell">456 Main St.</span>
+          </div>
+          <div role="row">
+            <span role="cell">Nancy</span>
+            <span role="cell">Jensen</span>
+            <span role="cell">XYZ, Inc.</span>
+            <span role="cell">456 Main St.</span>
+          </div>
         </div>
       </div>
     </div>
