Are section elements in examples intended to be landmarks? #562
Change-Id: I790cb1f9631c6d646c25695fbfd04efd390215a5
Signed-off-by: Carolyn MacLeod <Carolyn_MacLeod@ca.ibm.com>

--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -36,9 +36,9 @@
     <li><a href="LayoutGrids.html">Layout Grid Examples</a>: Three example implementations of grids that are used to lay out widgets, including a collection of navigation links, a message recipients list, and a set of search results.</li>
     <li><a href="advancedDataGrid.html">Advanced Data Grid Example</a>: Example of a grid with behaviors and features similar to a typical spreadsheet, including cell and row selection.</li>
   </ul>
-  <section>
-    <h2>Examples</h2>
-    <section>
+  <section aria-labelledby="ex_label">
+    <h2 id="ex_label">Examples</h2>
+    <section aria-labelledby="ex1_label">
       <h3 id="ex1_label">Example 1: Minimal Data Grid</h3>
       <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label" aria-label="Start of"></div>
       <div id="ex1">
@@ -126,7 +126,7 @@
           </li>
       </ol>
     </section>
-    <section>
+    <section aria-labelledby="ex2_label">
       <h3 id="ex2_label">Example 2: Sortable Data Grid With Editable Cells</h3>
       <div role="separator" id="ex2_start_sep" aria-labelledby="ex2_start_sep ex2_label" aria-label="Start of"></div>
       <div id="ex2">
@@ -324,7 +324,7 @@
         <li>A category may be changed by using the category pop-up menu.</li>
       </ol>
     </section>
-    <section>
+    <section aria-labelledby="ex3_label">
       <h3 id="ex3_label">Example 3: Scrollable Data Grid With Column Hiding</h3>
       <div role="separator" id="ex3_start_sep" aria-labelledby="ex3_start_sep ex3_label" aria-label="Start of"></div>
       <div id="ex3">
@@ -516,7 +516,7 @@
     </section>
   </section>
 
-  <section>
+  <section aria-labelledby="kbd_label">
     <h2 id="kbd_label">Keyboard Support</h2>
     <table aria-labelledby="kbd_label" class="def">
       <tr>
@@ -618,7 +618,7 @@
     </table>
   </section>
 
-<section>
+<section aria-labelledby="rps_label">
     <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
     <table aria-labelledby="rps_label" class="data attributes">
       <thead>
@@ -779,8 +779,8 @@
 
   <div id="arrow-keys-indicator" class="hidden"></div>
 
-  <section>
-    <h2>Javascript and CSS Source Code</h2>
+  <section aria-labelledby="jscss_label">
+    <h2 id="jscss_label">Javascript and CSS Source Code</h2>
     <ul>
       <li>CSS:
         <ul>
@@ -798,8 +798,8 @@
     </ul>
   </section>
 
-  <section>
-    <h2>HTML Source Code</h2>
+  <section aria-labelledby="html_label">
+    <h2 id="html_label">HTML Source Code</h2>
     <h3 id="sc1_label">Example 1: Minimal Data Grid</h3>
     <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for"></div>
     <pre><code id="sc1"></code></pre>
