Table Example: Add link to review issue
Development of the table example for issue #242 is complete.
Starting review process.

--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -18,9 +18,8 @@
   <main>
   <h1>Table Example</h1>
   <p>
-    <strong>NOTE:</strong> This example page is not complete and is not yet ready for review.
-    Work on this page is tracked in
-    <a href="https://github.com/w3c/aria-practices/issues/242">issue 242.</a>
+    <strong>NOTE:</strong> Please provide feedback on this example page in
+    <a href="https://github.com/w3c/aria-practices/issues/566">issue 566.</a>
   </p>
   <p>
     The below example illustrates an implementation of the WAI-ARIA
