Add nav links to remaining example pages

--- a/examples/accordion/accordion.html
+++ b/examples/accordion/accordion.html
@@ -18,7 +18,7 @@
 <body>
   <nav aria-label="Related Links" class="feedback">
     <ul>
-      <li><a href="../../#browser_and_AT_support">Browser and AT Support</a></li>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
       <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
       <li><a href="https://github.com/w3c/aria-practices/projects/8">Related Issues</a></li>
       <li><a href="../../#accordion">Design Pattern</a></li>
