--- a/examples/dialog-modal/dialog.html
+++ b/examples/dialog-modal/dialog.html
@@ -20,6 +20,14 @@
 </head>
 <body>
   <div id="base_window_layer">
+    <nav aria-label="Related Links" class="feedback">
+      <ul>
+        <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/projects/6">Related Issues</a></li>
+        <li><a href="../../#dialog_modal">Design Pattern</a></li>
+      </ul>
+    </nav>
     <main>
       <h1>Modal Dialog Example</h1>
       <p>
