--- a/examples/treeview/treeview-2/treeview-2b.html
+++ b/examples/treeview/treeview-2/treeview-2b.html
@@ -17,6 +17,14 @@
     <script type="text/javascript" src="js/treeitemLinks.js"></script>
   </head>
   <body>
+    <nav aria-label="Related Links" class="feedback">
+      <ul>
+        <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/projects/17">Related Issues</a></li>
+        <li><a href="../../../#TreeView">Design Pattern</a></li>
+      </ul>
+    </nav>
     <main>
       <h1>Navigation Treeview Example Using Declared Properties</h1>
       <p>
