--- a/examples/breadcrumb/index.html
+++ b/examples/breadcrumb/index.html
@@ -14,6 +14,14 @@
     <link href="css/breadcrumb.css" rel="stylesheet">
   </head>
   <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/21">Related Issues</a></li>
+      <li><a href="../../#breadcrumb">Design Pattern</a></li>
+    </ul>
+  </nav>
     <main>
     <h1>Breadcrumb Example</h1>
     <p>The following example demonstrates the <a href="../../#breadcrumb">breadcrumb design pattern</a>.</p>
