--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -15,6 +15,14 @@
 <script src="js/button.js" type="text/javascript"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/14">Related Issues</a></li>
+      <li><a href="../../#button">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
     <h1>Button Examples</h1>
     <p>
