--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -15,9 +15,16 @@
   <script src="js/checkbox.js" type="text/javascript"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/9">Related Issues</a></li>
+      <li><a href="../../../#checkbox">Design Pattern</a></li>
+    </ul>
+  </nav>  
   <main>
     <h1>Checkbox Example (Two State)</h1>
-
     <p>This example implements the  <a href="../../../#checkbox">Checkbox Design Pattern</a> for a two state checkbox using <code>div</code> elements.</p>
 
     <p>Similar examples include: </p>
