--- a/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
+++ b/examples/coding-template/Depricated-MultipleImplementationExample-Template.html
@@ -36,6 +36,14 @@
 
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="project_url">Related Issues</a></li>
+      <li><a href="../../#pattern_id">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main> <!--  Repeat the name of the example in this H1  -->
   <h1>EXAMPLE_NAME</h1>
 
