--- a/examples/coding-template/Example-Template.html
+++ b/examples/coding-template/Example-Template.html
@@ -33,6 +33,14 @@
 <script src="js/example_name.js" type="text/javascript"></script>
 </head>
 <body>
+<nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="project_url">Related Issues</a></li>
+      <li><a href="../../#pattern_id">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main> <!--  Repeat the name of the example in this H1  -->
   <h1>EXAMPLE_NAME Example</h1>
   <p>
