--- a/examples/feed/feed.html
+++ b/examples/feed/feed.html
@@ -12,6 +12,14 @@
 <script src="../js/app.js"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/19">Related Issues</a></li>
+      <li><a href="../../#feed">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
   <h1>Feed Example</h1>
   <p>
