--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -18,6 +18,14 @@
 <script src="js/layoutGrids.js" type="text/javascript"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/15">Related Issues</a></li>
+      <li><a href="../../#grid">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
   <h1>Layout Grid Examples</h1>
   <p>
