--- a/examples/listbox/listbox-scrollable.html
+++ b/examples/listbox/listbox-scrollable.html
@@ -17,6 +17,14 @@
 <script src="js/listbox-scrollable.js" type="text/javascript"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/13">Related Issues</a></li>
+      <li><a href="../../#Listbox">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
   <h1>Scrollable Listbox Example</h1>
   <p>
