--- a/examples/menu-button/menu-button-actions-active-descendant.html
+++ b/examples/menu-button/menu-button-actions-active-descendant.html
@@ -17,6 +17,14 @@
     <script src="js/PopupMenuActionActivedescendant.js" type="text/javascript"></script>
   </head>
   <body>
+    <nav aria-label="Related Links" class="feedback">
+      <ul>
+        <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/projects/5">Related Issues</a></li>
+        <li><a href="../../#menubutton">Design Pattern</a></li>
+      </ul>
+    </nav>  
     <main>
       <h1>Actions Menu Button Example Using aria-activedescendant</h1>
       <p>
