--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -16,6 +16,14 @@
     <script src="js/radioButton.js" type="text/javascript"></script>
   </head>
   <body>
+    <nav aria-label="Related Links" class="feedback">
+      <ul>
+        <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/projects/22">Related Issues</a></li>
+        <li><a href="../../../#radiobutton">Design Pattern</a></li>
+      </ul>
+    </nav>  
     <main role="main">
       <h1>Radio Group Example</h1>
 
