--- a/examples/radio/radio-2/radio-2.html
+++ b/examples/radio/radio-2/radio-2.html
@@ -17,6 +17,14 @@
 
   </head>
   <body>
+    <nav aria-label="Related Links" class="feedback">
+      <ul>
+        <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/projects/22">Related Issues</a></li>
+        <li><a href="../../../#radiobutton">Design Pattern</a></li>
+      </ul>
+    </nav>
     <main role="main">
 
       <h1>Radio Button Example (aria-activedescendant)</h1>
