--- a/examples/slider/multithumb-slider.html
+++ b/examples/slider/multithumb-slider.html
@@ -16,6 +16,14 @@
   <script src="js/multithumb-slider.js" type="text/javascript"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/3">Related Issues</a></li>
+      <li><a href="../../#slidertwothumb">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
     <h1>Horizontal Multi-Thumb Slider Example</h1>
     <p>
