--- a/examples/slider/slider-2.html
+++ b/examples/slider/slider-2.html
@@ -17,6 +17,14 @@
   <script src="js/text-slider.js" type="text/javascript"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/3">Related Issues</a></li>
+      <li><a href="../../#slider">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
     <h1>Slider Examples with aria-orientation and aria-valuetext</h1>
     <p>
