--- a/examples/table/table.html
+++ b/examples/table/table.html
@@ -15,6 +15,14 @@
 <link href="css/table.css" rel="stylesheet">
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/16">Related Issues</a></li>
+      <li><a href="../../#table">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
   <h1>Table Example</h1>
   <p>
