--- a/examples/tabs/tabs-1/tabs.html
+++ b/examples/tabs/tabs-1/tabs.html
@@ -15,6 +15,14 @@
     <link href="../css/tabs.css" rel="stylesheet">
   </head>
   <body>
+    <nav aria-label="Related Links" class="feedback">
+      <ul>
+        <li><a href="../../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+        <li><a href="https://github.com/w3c/aria-practices/projects/11">Related Issues</a></li>
+        <li><a href="../../../#tabpanel">Design Pattern</a></li>
+      </ul>
+    </nav>  
     <main>
       <h1>Example of Tabs with Automatic Activation</h1>
       <p>
