--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -20,6 +20,14 @@
 <script src="js/main.js" type="text/javascript"></script>
 </head>
 <body>
+  <nav aria-label="Related Links" class="feedback">
+    <ul>
+      <li><a href="../../#browser_and_AT_support">Browser and Assistive Technology Support</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/issues/new">Report Issue</a></li>
+      <li><a href="https://github.com/w3c/aria-practices/projects/18">Related Issues</a></li>
+      <li><a href="../../#toolbar">Design Pattern</a></li>
+    </ul>
+  </nav>
   <main>
   <h1>Toolbar Example</h1>
   <p>
