Feed Pattern: correct typo in aria-describedby guidance
Per feedback from @annabbott in issue #560,
modified the roles, states, and properties subsection of the feed pattern in aria-practices.html
to correct a typo in the aria-describedby bullet, changed "Each" to "each".

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1201,7 +1201,7 @@
             referring to elements inside the article that can serve as a distinguishing label.
           </li>
           <li>
-            It is optional but strongly recommended for Each <code>article</code> element to have
+            It is optional but strongly recommended for each <code>article</code> element to have
             <a href="#aria-describedby" class="property-reference">aria-describedby</a>
             referring to one or more elements inside the article that serve as the primary content of the article.
           </li>
