Feed Example: Reword Note to Post Pone Review to Release 2
For issue #565, modified:   examples/feed/feed.html to reword the note that preceeds the intro.
The new note wording describes the current implementation as proposed.
Task Force review is post poned to next release.

--- a/examples/feed/feed.html
+++ b/examples/feed/feed.html
@@ -23,7 +23,10 @@
   <main>
   <h1>Feed Example</h1>
   <p>
-    <strong>NOTE:</strong> Please provide feedback on this example in
+    <strong>NOTE:</strong> The feed role is a new WAI-ARIA feature, introduced by WAI-ARIA 1.1.
+     This page provides a proposed implementation of a feed component.
+    This proposal does not yet have ARIA Practices Task Force consensus.
+    Feedback is welcome in
     <a href="https://github.com/w3c/aria-practices/issues/565">issue 565.</a>
   </p>
   <p>
