ARIA 1.0 Combobox Examples: Fix duplicate IDs
modified:
* examples/combobox/aria1.0pattern/combobox-autocomplete-both.html
* examples/combobox/aria1.0pattern/combobox-autocomplete-list.html

Fix duplicate ID in the list of states.
ID of 'lb1-mn' was on both Minnesota and Montana.
Changed Montana to 'lb1-mt'.

--- a/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
+++ b/examples/combobox/aria1.0pattern/combobox-autocomplete-list.html
@@ -92,7 +92,7 @@
             <li id="lb1-mn" role="option">Minnesota</li>
             <li id="lb1-ms" role="option">Mississippi</li>
             <li id="lb1-mo" role="option">Missouri</li>
-            <li id="lb1-mn" role="option">Montana</li>
+            <li id="lb1-mt" role="option">Montana</li>
             <li id="lb1-ne" role="option">Nebraska</li>
             <li id="lb1-nv" role="option">Nevada</li>
             <li id="lb1-nh" role="option">New Hampshire</li>
