Add December 2017 change log appendix

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -4526,6 +4526,61 @@
 
     <section id="change_log" class="appendix">
       <h3>Change History</h3>
+      <section id="change_log_2017_december" class="appendix">
+        <h4>Changes in December 2017 Publication as Note</h4>
+        <ul>
+          <li>
+            Added the following:
+            <ul>
+              <li>Read Me First section</li>
+              <li>Combobox pattern</li>
+              <li>Combobox examples: 3 ARIA 1.0 style and 4 ARIA 1.1 style</li>
+              <li>Disclosure pattern</li>
+              <li>Feed example display page</li>
+              <li>Grid and table properties guidance section</li>
+              <li>Collapsible dropdown listbox example</li>
+              <li>Multi-thumb slider examples</li>
+              <li>Table pattern and example</li>
+            </ul>
+          </li>
+          <li>The top of each example page now includes a set of four related links to:
+            <ul>
+              <li><Q>Browser and Assistive Technology Support</Q> section of <q>Read Me First</q></li>
+              <li><q>Report Issue</q> page in the Github repository</li>
+              <li><q>Related Issues</q> listed in the Github project for the example</li>
+              <li><q>Design Pattern</q> section that applies to the example</li>
+            </ul>
+          </li>
+          <li>All Javascript and CSS files used by the examples include the correct license and copyright statements.</li>
+          <li>Significant revisions of guidance and implementation were made to the following sections, design patterns, and examples:
+            <ul>
+              <li>Introduction</li>
+              <li>Keyboard guidance for Mac OS</li>
+              <li>Accordion example</li>
+              <li>Mixed checkbox examples</li>
+              <li>Scrollable layout grid example</li>
+              <li>Listbox examples</li>
+              <li>Modal dialog example</li>
+              <li>editor menubar example</li>
+              <li>Navigation menubar example</li>
+              <li>Menu button examples</li>
+              <li>Spinbutton pattern</li>
+              <li>Toolbar example</li>
+              <li>Tree view examples</li>
+            </ul>
+          </li>
+        </ul>
+        <p>Also see:</p>
+        <ul>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/milestone/6">1.1 APG Release 1 milestone,</a>
+            which lists the GitHub issues that document discussions and reviews of changes included in the December 2017 publication.
+          </li>
+          <li>
+            <a href="https://github.com/w3c/aria-practices/wiki/Change-Log-for-December-2017-Note-Release-1">Detailed change log with links to all commits that are new in the December 2017 publication as a Note since the June 2017 working draft.</a>
+          </li>
+        </ul>
+      </section>
       <section id="change_log_2017_june" class="appendix">
         <h4>Changes in June 2017 Working Draft</h4>
         <ul>
